@@ -1,3 +1,9 @@
+2010-01-20  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/41826
+	* tree-ssa-structalias.c (get_constraint_for_ptr_offset): Avoid
+	access to re-allocated vector fields.
+
 2010-01-20  Jakub Jelinek  <jakub@redhat.com>
 
 	* dwarf2out.c (loc_descriptor_from_tree_1): Don't handle unsigned
